# dynamo-app

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: models.py  routers.py
app/utils/: __init__.py  dynamo.py
scripts/: dynamo.py
