[tool.poetry]
name = "dynamo-app"
version = "0.0.0-alpha"
description = "PoC: Dynamo DB App."
authors = ["anthony.caliani <avcaliani.it@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.74.1"}
boto3 = "^1.21.11"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pyspark = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
